Below only new and removed languages are listed, as well as changes to languages
because of Phabricator reports.

* …

=== Breaking changes in 1.36 ===
* Multiple methods that fell back to the $wgUser global variable were
  individually hard deprecated previously. The following have now been removed:
  - ApiTestCase::doLogin
  - Article::doDeleteArticle
  - Article::doDeleteArticleReal
  - File::delete
  - File::recordUpload
  - ForeignDBFile::delete
  - ForeignDBFile::recordUpload
  - LocalFile::delete
  - LocalFile::deleteOld
  - LocalFile::recordUpload
  - PageArchive::undelete
  - RecentChange::markPatrolled
  - Title::getUserPermissionsErrors
  - Title::quickUserCan
  - Title::userCan
  - WebRequest::getLimitOffset
  - WikiPage::doDeleteArticle
  - All methods of the old SpecialPageFactory; the entire class was removed
* Multiple methods previously had optional User parameters, with fallbacks
  to the $wgUser global variable. Not passing a User to those methods was
  previously hard deprecated, and support for not passing a User has now
  been removed:
   - ArchivedFile::userCan
   - File::userCan
   - FileDeleteForm::__construct
   - FileDeleteForm::doDelete
   - LocalFileDeleteBatch::__construct
   - LogEventsList::getExcludeClause (only needed for the 'user' audience)
   - LogEventsList::userCan
   - LogEventsList::userCanBitfield
   - LogEventsList::userCanViewLogType
   - LogPage::addEntry (also accepts user id instead)
   - OldLocalFile::userCan
   - PatrolLog::record
   - Title::getNotificationTimestamp (though the entire method is deprecated)
* The following hooks have been removed:
   - APIQueryInfoTokens
   - APIQueryRecentChangesTokens
   - APIQueryRevisionsTokens
   - APIQueryUsersTokens
   - ApiTokensGetTokenTypes
* LogEventsList::typeAction previously accepted an optional right parameter,
  and checked if the context user ($wgUser) had that right. Passing a right
  was hard deprecated in 1.35, and support for passing a right has now been